# Position-management-system

./: Anchor.toml  Cargo.toml  README.md
backend/: Cargo.toml
backend/migrations/: 001_init.sql
backend/src/: main.rs
backend/static/: index.html
programs/position-management/: Cargo.toml  TECHNICAL_DOCS.md
programs/position-management/src/: errors.rs  lib.rs
programs/position-management/src/instructions/: close_position.rs  initialize_user.rs  liquidate_position.rs  mod.rs  modify_position.rs  open_position.rs
programs/position-management/src/state/: mod.rs  position.rs  user_account.rs
programs/position-management/src/utils/: constants.rs
tests/: position-management.ts
