[package]
name = "position-management-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
chrono ="0.4"
actix-files = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
uuid = { version = "1.0", features = ["v4", "serde"] }  





[dev-dependencies]
